BLP-47 Pre-register combo box alignment issues.

--- a/public/landingPage/stylesheets/responsive.css
+++ b/public/landingPage/stylesheets/responsive.css
@@ -553,8 +553,18 @@
   }
 
   #preRegister button.selectpicker{
-    width: 45%;
+    width: 100%!important;;
     margin-top: 0px;
+  }
+
+  .input-group.spinner{
+    padding-top: 10px;
+    clear: left;
+    width: 100%;
+  }
+
+  div#packGroup.input-group {
+    display: block
   }
 
 .btn-group.bootstrap-select.show-tick.input-group-btn{
